--- a/style.css
+++ b/style.css
@@ -68,3 +68,13 @@ img {
     
     display: inline;
 }
+button {
+    width:10rem;
+    height:3rem;
+    border-radius: 1rem;
+    background-color: rgb(5, 48, 48);
+    margin-top:2rem;
+    color:white;
+    font-size:1.25rem;
+
+}
